Fix table header overflow

--- a/src/_scss/pages/dashboard/table/_dashboardTable.scss
+++ b/src/_scss/pages/dashboard/table/_dashboardTable.scss
@@ -54,34 +54,6 @@
         margin-bottom: rem(21);
         margin-top: rem(16);
 
-        .dashboard-table__file-column {
-            width: rem(105);
-        }
-
-        .dashboard-table__fyq-column {
-            width: rem(114);
-
-            .dashboard-table__header-text {
-                width: rem(70);
-            }
-        }
-
-        .dashboard-table__label-column {
-            width: rem(129);
-        }
-
-        .dashboard-table__instances-column {
-            width: rem(117);
-
-            .dashboard-table__header-text {
-                width: rem(66);
-            }
-        }
-
-        .dashboard-table__rule-column {
-            padding-right: 2em;
-        }
-
         thead {
             color: $color-white;
             background: $color-gray;
@@ -96,6 +68,7 @@
 
                     .dashboard-table__header-text{
                         margin: auto 0;
+                        white-space: nowrap;
                     }
 
                     .dashboard-table__sort-icons {
@@ -157,6 +130,7 @@
                 .file-label-button {
                     @include button-unstyled;
                     color: $color-primary;
+                    white-space: nowrap;
                 }
             }
         }
